--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 
 				<div class="offset-lg-1 col-lg-5">
 					<div class="main_title text-left">
-						<h2>let’s <br>
+						<h2>lets <br>
 							Introduce <br>
 							myself</h2>
 						<p>
-							I am a full stack developer that handles projects in mostly any domain, bearing knowledge in
+							I am a full stack developer that handles projects in almost any domain, bearing knowledge in
 							web, native, and hybrid development with expert quality assurance.
 						</p>
 						<p>
@@ -297,7 +297,7 @@
 					<li data-filter=".latest"> latest</li>
 				</ul>
 			</div>
-	
+
 			<div class="filters-content">
 				<div class="row portfolio-grid justify-content-center">
 					<div class="col-lg-4 col-md-6 all popular">
