--- a/index.html
+++ b/index.html
@@ -132,43 +132,25 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a>
+							<a href="https://play.google.com/store/apps/details?id=com.softrasys.eyemanager.app" target="_blank">
 								<div class="single-brand-item d-table">
 									<div class="d-table-cell text-center">
-										<img src="img/brands/logo1.png" alt="">
+										<img src="img/brands/softrasys.png" alt="">
 									</div>
 								</div>
 							</a>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a href="https://mawlatelecom.com">
+							<a href="https://teliaplus.com" target="_blank">
 								<div class="single-brand-item d-table">
 									<div class="d-table-cell text-center">
-										<img src="img/brands/logo2.png" alt="">
+										<img src="img/brands/telia-logo.png" alt="">
 									</div>
 								</div>
 							</a>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a href="http://waynyo.com">
-								<div class="single-brand-item d-table">
-									<div class="d-table-cell text-center">
-										<img src="img/brands/logo3.png" alt="">
-									</div>
-								</div>
-							</a>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a>
-								<div class="single-brand-item d-table" style="background-color: gray">
-									<div class="d-table-cell text-center">
-										<img src="img/brands/logo4.png" alt="">
-									</div>
-								</div>
-							</a>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a>
+							<a href="https://play.google.com/store/apps/details?id=com.classmobileapp.android&hl=en&gl=US&pli=1" target="_blank">
 								<div class="single-brand-item d-table">
 									<div class="d-table-cell text-center">
 										<img src="img/brands/logo5.png" alt="">
@@ -177,25 +159,16 @@
 							</a>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a href="https://atelier-mag.com">
+							<a href="https://play.google.com/store/apps/details?id=app.picwallet.android" target="_blank">
 								<div class="single-brand-item d-table">
 									<div class="d-table-cell text-center">
-										<img src="img/brands/logo6.png" alt="">
+										<img src="img/brands/PiC.png" alt="">
 									</div>
 								</div>
 							</a>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a href="https://chordz.net">
-								<div class="single-brand-item d-table">
-									<div class="d-table-cell text-center">
-										<img src="img/brands/logo7.svg" alt="">
-									</div>
-								</div>
-							</a>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a href="https://theconcept-lb.com">
+							<a href="https://theconceptmart.com" target="_blank">
 								<div class="single-brand-item d-table"  style="background-color: gray">
 									<div class="d-table-cell text-center">
 										<img src="img/brands/logo8.png" alt="">
@@ -204,7 +177,34 @@
 							</a>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
-							<a href="https://fivestarstours.com">
+							<a href="https://energybridge.net/" target="_blank">
+								<div class="single-brand-item d-table">
+									<div class="d-table-cell text-center">
+										<img src="img/brands/energybridge.png" alt="">
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="https://atelier-mag.com" target="_blank">
+								<div class="single-brand-item d-table">
+									<div class="d-table-cell text-center">
+										<img src="img/brands/logo6.png" alt="">
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="https://chordz.net" target="_blank">
+								<div class="single-brand-item d-table">
+									<div class="d-table-cell text-center">
+										<img src="img/brands/logo7.svg" alt="">
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="https://fivestarstours.com" target="_blank">
 								<div class="single-brand-item d-table">
 									<div class="d-table-cell text-center">
 										<img src="img/brands/logo9.png" alt="">
