--- a/index.html
+++ b/index.html
@@ -104,18 +104,18 @@
 
 				<div class="offset-lg-1 col-lg-5">
 					<div class="main_title text-left">
-						<h2>lets <br>
+						<h2>Let me <br>
 							Introduce <br>
-							myself</h2>
+							Myself</h2>
 						<p>
-							I am a full stack developer that handles projects in almost any domain, bearing knowledge in
+							I am a full stack developer who handles projects in almost any domain; bearing knowledge in
 							web, native, and hybrid development with expert quality assurance.
 						</p>
 						<p>
-							I started learning and understanding computers since I was a kid, until I found passion in
-							development by starting with basic programming ways like learning events and triggers in
-							games, and coding in shell scripts and MS Small Basic. Up until this day I have knowledge
-							and expertise in massive amounts of programming languages for most platforms.
+							I started learning and understanding computers a long time ago, until I found my passion in
+							development by starting with basic programming ways. Which included but wasn't limited to learning events and triggers in
+							games, and coding in shell scripts and MS Small Basic. Up until this day I have accumulated knowledge
+							and expertise in the field of web and app development for most platforms.
 						</p>
 						<a class="primary_btn" href="HusseinAlMawla-CV.pdf"  target="_blank"><span>Download CV</span></a>
 					</div>
