--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav justify-content-center">
 							<li class="nav-item active"><a class="nav-link" href="#home">Home</a></li>
+							<li class="nav-item active"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+							<li class="nav-item active"><a class="nav-link" href="#services">Services</a></li>
+
 						</ul>
 					</div>
 				</div>
@@ -56,7 +59,7 @@
 							<h2 class="text-uppercase">I am Hussein Al Mawla</h2>
 							<h5 class="text-uppercase">senior software engineer</h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="mailto:info@hmawla.com"><span>Hire Me</span></a>
+								<a class="primary_btn" href="mailto:info@hmawla.com" target="_blank"><span>Contact me</span></a>
 								<a class="primary_btn tr-bg" href="HusseinAlMawla-CV.pdf" target="_blank"><span>Get CV</span></a>
 							</div>
 						</div>
@@ -106,8 +109,9 @@
 	<!--================ End About Us Area =================-->
 
 	<!--================ Srart Brand Area =================-->
-	<section class="brand_area section_gap_bottom">
-		<div class="container">
+	<section  class="brand_area section_gap_bottom">
+		<div id="portfolio">
+		<div  class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-6">
 					<div class="row">
@@ -205,7 +209,7 @@
 								<a href="tel:0096171321357"><span class="fa fa-phone"></span></a>
 							</div>
 							<div class="ml-15">
-								<p><a href="tel:0096171321357">call now</p></a>
+								<p><a href="tel:0096171321357">call now </a></p>
 								<h3>(+961)-71-321357</h3>
 							</div>
 						</div>
@@ -213,18 +217,19 @@
 				</div>
 			</div>
 		</div>
+		</div>
 	</section>
 	<!--================ End Brand Area =================-->
 
 	<!--================ Start Features Area =================-->
 	<section class="features_area">
-		<div class="container">
+		<div  id="services" class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
 						<h2>service offers </h2>
 						<p>
-							Here are some of the services that I offer for all kinds of businesses
+							Some Services I offer for all kinds of businesses:
 						</p>
 					</div>
 				</div>
@@ -274,6 +279,7 @@
 						</div>
 						<div class="footer_social">
 							<a href="https://www.facebook.com/hsynmawla"  target="_blank"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.instagram.com/hmawla.dev/" target="_blank"><i class="fa fa-instagram"></i></a>
 							<a href="https://www.linkedin.com/in/hmawla/"  target="_blank"><i class="fa fa-linkedin"></i></a>
 							<a href="https://github.com/hmawla"  target="_blank"><i class="fa fa-github"></i></a>
 						</div>
