--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6">
                             <a href="https://theconceptmart.com" target="_blank">
-                                <div class="single-brand-item d-table" style="background-color: gray">
+                                <div class="single-brand-item d-table">
                                     <div class="d-table-cell text-center">
-                                        <img src="img/brands/logo8.png" alt="">
+                                        <img src="img/brands/theconcept.png" alt="">
                                     </div>
                                 </div>
                             </a>
